--- a/games/igames/templates/companypage.html
+++ b/games/igames/templates/companypage.html
@@ -5,5 +5,29 @@
 	<body>
 		<h1>Company: {{ company.name }}</h1>
 		<p>Fundation date: {{ company.fundation_date }}</p>
+		<p>Games: </p>
+			{% if games %}
+			<ul>
+			{% for game in games.all %}
+			<li>
+			{{game.name}}
+			</li>
+			{% endfor %}
+			</ul>
+			{% else %}
+			<p>Doesn't exist games.</p>
+			{% endif %}
+		<p>Developes in these platforms: </p>
+			{% if platforms %}
+			<ul>
+			{% for platform in platforms %}
+			<li>
+			{{platform.name}}
+			</li>
+			{% endfor %}
+			</ul>
+			{% else %}
+			<p>Doesn't exist platforms.</p>
+			{% endif %}
 	</body>
 </html>
