--- a/games/igames/templates/gamepage.html
+++ b/games/igames/templates/gamepage.html
@@ -7,30 +7,26 @@
 		<p>Release date: {{ game.release_date }}</p>
 		<p>Price: {{ game.price }}</p>
 		<p>Description: {{ game.description }}</p>
-		<p>Company: {{ game.company }}</p>
+		<p>Company: <A HREF="http://localhost:8000/company/{{game.company}}">{{game.company}}</A></p>
 		<p>Developers: </p>
 			{% if game.developers %}
 			<ul>
 			{% for developer in game.developers.all %}
 			<li>
-			{{developer.username}}
+			<A HREF="http://localhost:8000/user/{{developer.username}}">{{developer.username}}</A>
 			</li>
 			{% endfor %}
 			</ul>
-			{% else %}
-			<p>Doesn't exist developers.</p>
 			{% endif %}
 		<p>Platforms: </p>
 			{% if game.platforms %}
 			<ul>
 			{% for platform in game.platforms.all %}
 			<li>
-			{{platform.name}}
+			<A HREF="http://localhost:8000/platform/{{platform.name}}">{{platform.name}}</A>
 			</li>
 			{% endfor %}
 			</ul>
-			{% else %}
-			<p>Doesn't exist platforms.</p>
 			{% endif %}
 
 	</body>
