--- a/games/igames/templates/companypage.html
+++ b/games/igames/templates/companypage.html
@@ -10,7 +10,7 @@
 			<ul>
 			{% for game in games.all %}
 			<li>
-			<A HREF="http://localhost:8000/games/{{game.name}}">{{game.name}}</A>
+			<A HREF="/games/{{game.name}}">{{game.name}}</A>
 			</li>
 			{% endfor %}
 			</ul>
@@ -22,7 +22,7 @@
 			<ul>
 			{% for developer in developers %}
 			<li>
-			<A HREF="http://localhost:8000/users/{{developer.username}}">{{developer.username}}</A>
+			<A HREF="/users/{{developer.username}}">{{developer.username}}</A>
 			</li>
 			{% endfor %}
 			</ul>
@@ -34,7 +34,7 @@
 			<ul>
 			{% for platform in platforms %}
 			<li>
-			<A HREF="http://localhost:8000/platforms/{{platform.name}}">{{platform.name}}</A>
+			<A HREF="/platforms/{{platform.name}}">{{platform.name}}</A>
 			</li>
 			{% endfor %}
 			</ul>
