--- a/games/igames/templates/registration/register.html
+++ b/games/igames/templates/registration/register.html
@@ -1,15 +1,14 @@
-{% extends "base.html" %}
+<html>
+	<head>
+		<title>Create an accoun</title>
+	</head>
+	<body>
+		  <h1>Create an account</h1>
 
-{% block title %}Create an account{% endblock %}
-
-{% block content %}
-  <h1>Create an account</h1>
-
-  <form action="" method="post">
-      {{ form.as_p }}
-      <input type="submit" value="Create the account">
-      {% csrf_token %}
-  </form>
-{% endblock %}
-
-
+		  <form action="" method="post">
+		      {{ form.as_p }}
+		      <input type="submit" value="Create the account">
+		      {% csrf_token %}
+		  </form>
+	</body>
+</html>
