--- a/games/igames/templates/registration/login.html
+++ b/games/igames/templates/registration/login.html
@@ -1,27 +1,52 @@
 <html>
 	<head>
 	<title>Developers - Sign In</title>
+
+	<style type="text/css">
+		body {
+			margin:50px 0px; padding:0px;
+			text-align:center;
+			}
+	
+		#Content {
+			width:500px;
+			margin:0px auto;
+			text-align:center;
+			padding:15px;
+			border:1px dashed #333;
+			background-color:#eee;
+			}
+		#Error {
+			color:red;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>User Login</h1>
-		{% if form.errors %}
-		<p>Error validating user.</p>
-		{% endif %}
+		<br><br>
+		<div id="Content">
+			{% if form.errors %}
+			<p id="Error">Error validating user.</p>
+			{% endif %}
 
-		<form method="post" action=".">
-		<p><label for="id_username">User:</label>
-		{{ form.username }}</p>
-		<p><label for="id_password">Pass:</label>
-		{{ form.password }}</p>
+			<form method="post" action=".">
+			<p><label for="id_username">User:</label>
+			{{ form.username }}</p>
+			<p><label for="id_password">Pass:</label>
+			{{ form.password }}</p>
 
-		<input type="hidden" name="next" value="/" />
-		<input type="submit" value="Log in" />
-		{% csrf_token %}
-		</form>
-		<form>
-		If you aren't registered, do it here:
-		<input Type="BUTTON" VALUE="Register" ONCLICK="window.location.href='/register'">
-		</form>
-		
+			<input type="hidden" name="next" value="/" />
+			<input type="submit" value="Log in" />
+			{% csrf_token %}
+			</form>
+			<br>
+			<form>
+			If you aren't registered, do it here:
+			<input Type="BUTTON" VALUE="Register" ONCLICK="window.location.href='/register'">
+			</form>
+		</div>	
+
+		<br><br>
+		<input Type="BUTTON" VALUE="Home" ONCLICK="window.location.href='/'">
 	</body>
 </html>
