--- a/games/igames/templates/gamepage.html
+++ b/games/igames/templates/gamepage.html
@@ -45,6 +45,14 @@
 				{% endfor %}
 				</ul>
 				{% endif %}
+
+			{% if owner %}
+			<br>
+			<form>
+			<input Type="BUTTON" VALUE="Edit game" ONCLICK="window.location.href='/'">
+			<input Type="BUTTON" VALUE="Delete game" ONCLICK="window.location.href='/logout'">
+			</form>
+			{% endif %}
 		</div>
 
 		<br><br>
