--- a/games/igames/templates/mainpage.html
+++ b/games/igames/templates/mainpage.html
@@ -30,6 +30,10 @@
 			<form>
 			<input Type="BUTTON" VALUE="Profile" ONCLICK="window.location.href='/developers/{{user.username}}'">
 			</form>
+			<form>
+			<input Type="BUTTON" VALUE="Create Game" ONCLICK="window.location.href='/creategame'">
+			<input Type="BUTTON" VALUE="My Games" ONCLICK="window.location.href='/mygames'">
+			</form>
 			<br><br>
 
 			<p>Aplication Database:</p>
