--- a/games/igames/templates/companypage.html
+++ b/games/igames/templates/companypage.html
@@ -22,6 +22,8 @@
 
 		<div id="Content">
 			<p>Fundation date: {{ company.fundation_date }}</p>
+			<p>Country: {{ company.country }}</p>
+			<p>State or Province: {{ company.stateOrProvince }}</p>
 			<p>Games: </p>
 				{% if games %}
 				<ul>
