--- a/games/igames/templates/formdelete.html
+++ b/games/igames/templates/formdelete.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Delete a Game</title>
+		<title>{{ title }}</title>
 
 		<style type="text/css">
 		body {
@@ -20,12 +20,12 @@
 
 	</head>
 	<body>
-		  <h1>Delete a Game</h1>
+		  <h1>{{ title }}</h1>
 		  <br><br>
 		  <div id="Content">
 			  <form action="" method="post">
 			      {% csrf_token %}
-			      <p> Are you sure you want to delete the game: "{{object}}"?</p>
+			      <p> Are you sure you want to {{ title }}: "{{object}}"?</p>
 			      <input type="submit" value="Confirm">
 			      <input type="BUTTON" value="Cancel" action ="action" ONCLICK="history.go(-1);">
 			  </form>
